💄 Specify flex to fix aligning vertical

--- a/src/scss/pages/member.module.scss
+++ b/src/scss/pages/member.module.scss
@@ -7,6 +7,8 @@
 
 .linksContainer {
   margin-top: details.$min-padding;
+
+  @include details.flex-style(nowrap, flex-start);
 }
 
 .linksContainer > * + * {
